--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,3 @@
-<IfModule mod_rewrite.c>
-    RewriteEngine On
-    RewriteBase /
-    RewriteRule ^(.+)\.html?$ $1.php [L]
-</IfModule>
+<FilesMatch "\.html$">
+    SetHandler application/x-httpd-php
+</FilesMatch>
